--- a/html_parsing/Crawling Berlin Senatskanzlei First Experiments.ipynb
+++ b/html_parsing/Crawling Berlin Senatskanzlei First Experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "600d3ffe",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "6e94ceb8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "8319d8b7",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "c640ecf8",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "af2263bb",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "200"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "cb5d0a5a",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "75f83b6f",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "'<!doctype html>\\n<html xmlns=\"http://www.w3.org/1999/xhtml\" xml:lang=\"de\" lang=\"de\">\\n<head prefix=\"og'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "2e731fd9",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "09a1b437",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "46a114e3",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "cb944c77",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "011c4adb",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "bs4.element.Tag"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "eeefa88c",
    "metadata": {},
    "outputs": [
@@ -211,10 +211,10 @@
       "      <div class=\"image\">\n",
       "       <!-- Image.view -->\n",
       "       <div class=\"image__image image__image\" style=\"\">\n",
-      "        <img alt=\"Senat vor Ort in Treptow-Köpenick am 17.09.2024\" class=\"jpg\" data-orig=\"/rbmskzl/aktuelles/media/crop_nan_434.51666259765625_nan_104.48333740234375_807_539_fb29c4e3675dfc82ec843890a273ff2a_dsc05599.jpg\" loading=\"lazy\" src=\"/imgscaler/rBvs_FtS1ShRICRId3iJPDG_OaSxawMMyEJ7Ryf_vrg/rbig2zu1/L3N5czExLXByb2QvcmJtc2t6bC9ha3R1ZWxsZXMvbWVkaWEvY3JvcF9uYW5fNDM0LjUxNjY2MjU5NzY1NjI1X25hbl8xMDQuNDgzMzM3NDAyMzQzNzVfODA3XzUzOV9mYjI5YzRlMzY3NWRmYzgyZWM4NDM4OTBhMjczZmYyYV9kc2MwNTU5OS5qcGc.jpg?ts=1726737769\"/>\n",
+      "        <img alt=\"Kai Wegner begrüßt Italiens Präsidenten Sergio Mattarella am 27.09.2024\" class=\"jpg\" data-orig=\"/rbmskzl/aktuelles/media/crop_nan_653_nan_340.48333740234375_1500_1000_54ccaad2ef03c22d8972e5b4746e29dc_p1_06454.jpg\" loading=\"lazy\" src=\"/imgscaler/yWuwttGbcIvWYHeN-MVnduJIEruYklTI1VYn1G_jO0w/rbig2zu1/L3N5czExLXByb2QvcmJtc2t6bC9ha3R1ZWxsZXMvbWVkaWEvY3JvcF9uYW5fNjUzX25hbl8zNDAuNDgzMzM3NDAyMzQzNzVfMTUwMF8xMDAwXzU0Y2NhYWQyZWYwM2MyMmQ4OTcyZTViNDc0NmUyOWRjX3AxXzA2NDU0LmpwZw.jpg?ts=1727715705\"/>\n",
       "       </div>\n",
       "       <p class=\"image__copyright\">\n",
-      "        Bild: Senatskanzlei / Xenia Günther\n",
+      "        Bild: Landesarchiv Berlin / Grönboldt\n",
       "       </p>\n",
       "       <!-- /Image.view -->\n",
       "      </div>\n",
@@ -222,13 +222,13 @@
       "     <div class=\"teaser_buehne__right\">\n",
       "      <div class=\"inner\">\n",
       "       <h2 class=\"title\">\n",
-      "        Senat vor Ort in Treptow-Köpenick\n",
+      "        Kai Wegner begrüßt Italiens Präsidenten Sergio Mattarella\n",
       "       </h2>\n",
       "       <p class=\"text\">\n",
-      "        Nach einer gemeinsamen Sitzung begaben sich der Regierende Bürgermeister Kai Wegner und Bezirksbürgermeister Oliver Igel mit Mitgliedern des Senats und des Bezirksamts auf Tour durch den Bezirk.\n",
+      "        Der Regierende Bürgermeister begrüßte den italienischen Präsidenten und seine Frau in Berlin am Brandenburger Tor.\n",
       "       </p>\n",
       "       <span class=\"action\">\n",
-      "        <a aria-label=\"Link zu: Senat vor Ort in Treptow-Köpenick\" class=\"more\" href=\"/rbmskzl/aktuelles/media/senat-vor-ort-berliner-senat-zu-besuch-im-bezirk-treptow-koepenick-1486599.php\" title=\"Senat vor Ort in Treptow-Köpenick\">\n",
+      "        <a aria-label=\"Link zu: Kai Wegner begrüßt Italiens Präsidenten Sergio Mattarella\" class=\"more\" href=\"/rbmskzl/aktuelles/media/kai-wegner-begruesst-italiens-praesidenten-sergio-mattarella-1490034.php\" title=\" Kai Wegner begrüßt Italiens Präsidenten Sergio Mattarella\">\n",
       "         Weitere Informationen\n",
       "        </a>\n",
       "       </span>\n",
@@ -236,20 +236,20 @@
       "        <strong>\n",
       "         Bild:\n",
       "        </strong>\n",
-      "        Senatskanzlei / Xenia Günther\n",
+      "        Landesarchiv Berlin / Grönboldt\n",
       "       </span>\n",
       "      </div>\n",
       "     </div>\n",
       "     <li>\n",
       "      <div class=\"modul-teasertile_buehne\" data-add-clickable-area=\"full\">\n",
       "       <h2 class=\"title\">\n",
-      "        Kai Wegner vor Ort\n",
+      "        Wegner empfängt Jerusalemer Bürgermeister\n",
       "       </h2>\n",
       "       <p class=\"text\">\n",
-      "        Der Regierende Bürgermeister besuchte am 16. September den Bezirk Steglitz-Zehlendorf und stellte sich den Fragen der Berlinerinnen und Berliner.\n",
+      "        Kai Wegner, empfing am 26. September den Bürgermeister von Jerusalem, Mosche Lion.\n",
       "       </p>\n",
       "       <span class=\"action\">\n",
-      "        <a aria-label=\"Link zu: Kai Wegner vor Ort\" class=\"more\" href=\"/rbmskzl/aktuelles/media/kai-wegner-vor-ort-in-steglitz-zehlendorf-1486596.php\" title=\"Kai Wegner vor Ort\">\n",
+      "        <a aria-label=\"Link zu: Wegner empfängt Jerusalemer Bürgermeister\" class=\"more\" href=\"/rbmskzl/aktuelles/media/kai-wegner-empfaengt-jerusalems-buergermeister-mosch-lion-1489224.php\" title=\"Wegner empfängt Jerusalemer Bürgermeister\">\n",
       "         Weitere Informationen\n",
       "        </a>\n",
       "       </span>\n",
@@ -258,13 +258,13 @@
       "     <li>\n",
       "      <div class=\"modul-teasertile_buehne\" data-add-clickable-area=\"full\">\n",
       "       <h2 class=\"title\">\n",
-      "        Neue Imagekampagne\n",
+      "        Kai Wegner vor Ort\n",
       "       </h2>\n",
       "       <p class=\"text\">\n",
-      "        Berlin startet eine neue bundesweite Imagekampagne. Ziel ist es, das Gemeinschaftsgefühl der Stadt zu stärken und national für Berlin zu werben.\n",
+      "        Der Regierende Bürgermeister besucht am 28. Oktober den Bezirk Kreuzberg-Friedrichshain und stellt sich den Fragen der Berlinerinnen und Berliner. Melden Sie sich an!\n",
       "       </p>\n",
       "       <span class=\"action\">\n",
-      "        <a aria-label=\"Link zu: Neue Imagekampagne \" class=\"more\" href=\"/rbmskzl/aktuelles/pressemitteilungen/2024/pressemitteilung.1481932.php\" title=\"Neue Imagekampagne \">\n",
+      "        <a aria-label=\"Link zu: Kai Wegner vor Ort\" class=\"more\" href=\"/rbmskzl/aktuelles/veranstaltungen/kai-wegner-vor-ort/\" title=\"Kai Wegner vor Ort\">\n",
       "         Weitere Informationen\n",
       "        </a>\n",
       "       </span>\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "id": "d37511e7",
    "metadata": {},
    "outputs": [],
@@ -310,20 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "id": "b4c79857",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<h2 class=\"title\">Senat vor Ort in Treptow-Köpenick</h2>,\n",
+       "[<h2 class=\"title\"> Kai Wegner begrüßt Italiens Präsidenten Sergio Mattarella</h2>,\n",
+       " <h2 class=\"title\">Wegner empfängt Jerusalemer Bürgermeister</h2>,\n",
        " <h2 class=\"title\">Kai Wegner vor Ort</h2>,\n",
-       " <h2 class=\"title\">Neue Imagekampagne </h2>,\n",
        " <h2 class=\"title\">Fokusthemen</h2>]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "id": "b441ce54",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "id": "6a267be6",
    "metadata": {},
    "outputs": [
@@ -352,16 +352,16 @@
      "data": {
       "text/plain": [
        "[<p class=\"text\">\n",
-       "                     Nach einer gemeinsamen Sitzung begaben sich der Regierende Bürgermeister Kai Wegner und Bezirksbürgermeister Oliver Igel mit Mitgliedern des Senats und des Bezirksamts auf Tour durch den Bezirk.                        </p>,\n",
+       "                     Der Regierende Bürgermeister begrüßte den italienischen Präsidenten und seine Frau in Berlin am Brandenburger Tor.                        </p>,\n",
        " <p class=\"text\">\n",
-       "                 Der Regierende Bürgermeister besuchte am 16. September den Bezirk Steglitz-Zehlendorf und stellte sich den Fragen der Berlinerinnen und Berliner.                        </p>,\n",
+       "                 Kai Wegner, empfing am 26. September den Bürgermeister von Jerusalem, Mosche Lion.                        </p>,\n",
        " <p class=\"text\">\n",
-       "                 Berlin startet eine neue bundesweite Imagekampagne. Ziel ist es, das Gemeinschaftsgefühl der Stadt zu stärken und national für Berlin zu werben.                        </p>,\n",
+       "                 Der Regierende Bürgermeister besucht am 28. Oktober den Bezirk Kreuzberg-Friedrichshain und stellt sich den Fragen der Berlinerinnen und Berliner. Melden Sie sich an!                        </p>,\n",
        " <p class=\"text\">\n",
        "                 Berlin steht vor diversen gesellschaftlichen Herausforderungen. Der Berliner Senat setzt einen Fokus auf sechs Themenschwerpunkte.                        </p>]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "id": "8646b49a",
    "metadata": {},
    "outputs": [],
@@ -382,20 +382,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "id": "e308d9c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Nach einer gemeinsamen Sitzung begaben sich der Regierende Bürgermeister Kai Wegner und Bezirksbürgermeister Oliver Igel mit Mitgliedern des Senats und des Bezirksamts auf Tour durch den Bezirk.',\n",
-       " 'Der Regierende Bürgermeister besuchte am 16. September den Bezirk Steglitz-Zehlendorf und stellte sich den Fragen der Berlinerinnen und Berliner.',\n",
-       " 'Berlin startet eine neue bundesweite Imagekampagne. Ziel ist es, das Gemeinschaftsgefühl der Stadt zu stärken und national für Berlin zu werben.',\n",
+       "['Der Regierende Bürgermeister begrüßte den italienischen Präsidenten und seine Frau in Berlin am Brandenburger Tor.',\n",
+       " 'Kai Wegner, empfing am 26. September den Bürgermeister von Jerusalem, Mosche Lion.',\n",
+       " 'Der Regierende Bürgermeister besucht am 28. Oktober den Bezirk Kreuzberg-Friedrichshain und stellt sich den Fragen der Berlinerinnen und Berliner. Melden Sie sich an!',\n",
        " 'Berlin steht vor diversen gesellschaftlichen Herausforderungen. Der Berliner Senat setzt einen Fokus auf sechs Themenschwerpunkte.']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "id": "fb26468a",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "id": "df720ad9",
    "metadata": {},
    "outputs": [],
@@ -432,24 +432,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "id": "3596bd6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'title': 'Senat vor Ort in Treptow-Köpenick',\n",
-       "  'text': 'Nach einer gemeinsamen Sitzung begaben sich der Regierende Bürgermeister Kai Wegner und Bezirksbürgermeister Oliver Igel mit Mitgliedern des Senats und des Bezirksamts auf Tour durch den Bezirk.'},\n",
+       "[{'title': 'Kai Wegner begrüßt Italiens Präsidenten Sergio Mattarella',\n",
+       "  'text': 'Der Regierende Bürgermeister begrüßte den italienischen Präsidenten und seine Frau in Berlin am Brandenburger Tor.'},\n",
+       " {'title': 'Wegner empfängt Jerusalemer Bürgermeister',\n",
+       "  'text': 'Kai Wegner, empfing am 26. September den Bürgermeister von Jerusalem, Mosche Lion.'},\n",
        " {'title': 'Kai Wegner vor Ort',\n",
-       "  'text': 'Der Regierende Bürgermeister besuchte am 16. September den Bezirk Steglitz-Zehlendorf und stellte sich den Fragen der Berlinerinnen und Berliner.'},\n",
-       " {'title': 'Neue Imagekampagne',\n",
-       "  'text': 'Berlin startet eine neue bundesweite Imagekampagne. Ziel ist es, das Gemeinschaftsgefühl der Stadt zu stärken und national für Berlin zu werben.'},\n",
+       "  'text': 'Der Regierende Bürgermeister besucht am 28. Oktober den Bezirk Kreuzberg-Friedrichshain und stellt sich den Fragen der Berlinerinnen und Berliner. Melden Sie sich an!'},\n",
        " {'title': 'Fokusthemen',\n",
        "  'text': 'Berlin steht vor diversen gesellschaftlichen Herausforderungen. Der Berliner Senat setzt einen Fokus auf sechs Themenschwerpunkte.'}]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
