--- a/analysis/Readability-Analysis.ipynb
+++ b/analysis/Readability-Analysis.ipynb
@@ -877,7 +877,7 @@
     "    line = p.line('x', 'y', source=line_source, line_width=2, color='blue')\n",
     "\n",
     "    # RadioButtonGroup to select mode\n",
-    "    radio_button_group_time = RadioButtonGroup(labels=[\"Monthly\", \"Weekly\", \"Daily\"], active=0)\n",
+    "    radio_button_group_time = RadioButtonGroup(labels=[\"Yearly\", \"Monthly\", \"Weekly\"], active=0)\n",
     "    radio_button_group_metric = RadioButtonGroup(labels=[\"Flesch\", \"ARI\", \"Coleman_Liau\", \"Wiener_Sachtextformel\"], active=0)\n",
     "\n",
     "\n",
@@ -886,12 +886,12 @@
     "        args=dict(\n",
     "            line=line,\n",
     "            sources=metrics_to_time_frame,\n",
-    "            radio_button_time=radio_button_group_time,\n",
-    "            radio_button_metric=radio_button_group_metric\n",
+    "            radio_button_group_time=radio_button_group_time,\n",
+    "            radio_button_group_metric=radio_button_group_metric\n",
     "        ),\n",
     "        code=\"\"\"                \n",
     "        // Access the value of the switch\n",
-    "        const sources = switch_element.active ? relative_sources : absolute_sources;\n",
+    "        // const sources = switch_element.active ? relative_sources : absolute_sources;\n",
     "\n",
     "        // Access the value of the RadioButtonGroup Time\n",
     "        const mode = radio_button_group_time.active;\n",
@@ -900,7 +900,7 @@
     "        const base = radio_button_group_metric.active;\n",
     "    \n",
     "        // Retrieve the selected frequency\n",
-    "        const freq = [\"M\", \"W-MON\", \"D\"][mode];\n",
+    "        const freq = [\"Y\", \"M\", \"W-MON\"][mode];\n",
     "\n",
     "        // Retrieve the selected metric\n",
     "        const metric = [\"Flesch\", \"ARI\", \"Coleman_Liau\", \"Wiener_Sachtextformel\"][base];\n",
